Layout fix, removed list on small screens

--- a/src/MarketPage/MarketPage.css
+++ b/src/MarketPage/MarketPage.css
@@ -1,9 +1,7 @@
 .cards{
-    padding: 5%;
-}
-.padtop{
-    padding-top: 2%;
+    padding-top: 5%;
+
 }
 h1{
-    padding-top: 6.5%;
+    padding-top: 5%;
 }
